# memo-demo-test

./: .gitignore  CLAUDE.md  LICENSE  QUICK_FIX.md  README.md  Taskfile.yml  VSCProject.code-workspace  deploy-dev.py  deploy.py  environment.yml  prettier.config.mjs  pyproject.toml
.github/workflows/: publish.yml
_agents/: FLOW_REPORT.md  INVESTIGATION_REPORT.md  PLAN.md
_memories/: 2025-08-06_COMMENTS_ISSUE_ANALYSIS.md  2025-08-06_COMMENTS_PLANNED_FIX.md  2025-08-06_TESTING_COMMENT_TOGGLE.md  CMD_SLASH_VERIFICATION_REPORT.md  COMMENT_TOGGLE_FIX_SUMMARY.md  FINAL_CMD_SLASH_STATUS.md  MINIMAL_QMD_SUCCESS.md  TRANSLATION_PROGRESS.md  quick-verify-comment-toggle.js  test-cmd-slash-proof.sh  test-extrakeys-simulation.js  verify-comment-toggle.js  verify-translation.html
docs/: codemirror-progression.html  compare-translation.html  demo-eig.html  demo-mdp.html  demo-scalar-implicature.html  demo.html  game23.html  index.html  minimal-codemirror.html  minimal-thebe-no-kernel.html  minimal-with-thebe-explicit.html  minimal-with-thebe.html  robots.txt  rsa.html  search.json  sitemap.xml  test-codemirror-direct.html  test-codemirror-hybrid.html  test-codemirror-static-html-translate.html  test-codemirror-static-html.html  test-codemirror-static.html  test-comment-functionality.html  test.html  ultra-minimal-codemirror.html  verify-qmd-config.html  verify-translation.html
docs/assets/js/: custom-navbar.js  thebe-config.js
docs/assets/styles/: custom-navbar.css  custom.css  styles.css
docs/site_libs/bootstrap/: bootstrap-8b596f23e255f839fdb6fa8985377a9b.min.css
src/: _metadata.yml  _quarto.yml  codemirror-progression.qmd  compare-translation.qmd  demo-eig.qmd  demo-mdp.qmd  demo-scalar-implicature.qmd  demo.qmd  game23.qmd  index.qmd  minimal-codemirror.qmd  minimal-thebe-no-kernel.qmd  minimal-with-thebe-explicit.qmd  minimal-with-thebe.qmd  rsa.qmd  test-codemirror-browser.js  test-codemirror-comment.html  test-codemirror-direct.qmd  test-codemirror-hybrid.qmd  test-codemirror-static.qmd  test-comment-functionality.qmd  test-comment-toggle.js  test-minimal-cmd.js  test.qmd  ultra-minimal-codemirror.qmd  verify-qmd-config.qmd  verify-translation.qmd
src/assets/js/: thebe-config.js
src/assets/styles/: thebe.css
src/includes/: thebe.html
taskfiles/: TasksPython.yml
